# ma-libs

./: .gitignore  CMakeLists.txt  README.md  cbuild.sh  manage_dependency_libraries.sh
cmake_modules/: COMPILERCOMMON.cmake  COMPILERCPP.cmake  COMPILERFORTRAN.cmake  FindLIBS.cmake
cpp/fortran_bindings/: CMakeLists.txt
cpp/fortran_bindings/src/: external_function.f90  main.cpp
cpp/libalg_lapack/: CMakeLists.txt
cpp/libalg_lapack/src/: blas_interface.h  la_blas_mult.cpp  la_blas_mult.h  la_decomposition.h  la_lapack_eigen.cpp  la_lapack_eigen.h  la_lapack_lu.cpp  la_lapack_lu.h  la_lapack_macro.h  la_lapack_misc.cpp  la_lapack_misc.h  la_lapack_qr.cpp  la_lapack_qr.h  la_lapack_schur.cpp  la_lapack_schur.h  la_lapack_svd.cpp  la_lapack_svd.h  la_utils.h  lapack_interface.h
cpp/libgraphic_engine/: CMakeLists.txt
cpp/libgraphic_engine/src/: camera.cpp  camera.h  dglutils.cpp  dglutils.h  ge_base.h  ge_bbox.h  ge_geomutils.h  ge_mathbase.h  ge_mesh2.cpp  ge_mesh2.h  ge_mesh3.cpp  ge_mesh3.h  ge_ray.h  ge_scenepicking.cpp  ge_scenepicking.h  geom_mesh.h  geomplanes.h  geomprocessing.cpp  geomprocessing.h  geomshapes.cpp  geomshapes.h  light.cpp  light.h  mesh.cpp  mesh.h  scene.cpp  scene.h  shaderprogram.cpp  shaderprogram.h  transform.h
cpp/libnn/: CMakeLists.txt  create_virtualenv.sh
cpp/libnn/src/: activations.h  ann_mlp_ga_py_interface.cpp  ann_mlp_ga_v1.cpp  ann_mlp_ga_v1.h  ann_mlp_sgd_v1.cpp  ann_mlp_sgd_v1.h  ann_mlp_v1.cpp  ann_mlp_v1.h
cpp/libs/glew/: CMakeLists.txt
cpp/libs/imGuIZMO.quat/: CMakeLists.txt
cpp/libs/imgui/: CMakeLists.txt
cpp/libs/implot/: CMakeLists.txt
cpp/math/algebra/: matrix.cpp  matrix.h  matrix_operations.h  tolerance.h
cpp/math/solvers/: runge_kutta.h
cpp/python_bindings/: CMakeLists.txt  README.md  binding_test.cpp  create_virtualenv.sh  pybind11_add_p.py  pybinding_test.h
cpp/python_bindings/src/: binding_test.h  main.cpp  pybind11_add.cpp  pybinding_test.cpp
cpp/utils/: shared_libraries_export.hpp
cpp/utils/hdf5/: hdf5_ext.cpp  hdf5_ext.h
cpp/utils/log/: log.cpp  log.h
cpp/utils/std/: cout.h  string.hpp
cpp/utils/thread/: thread_pool.hpp
fortran/cpp_bindings/: CMakeLists.txt
fortran/cpp_bindings/src/: external_function.cpp  external_function.h  main.f90
fortran/libalgebra/: CMakeLists.txt  algebra_01.f90
fortran/libalgo/: CMakeLists.txt  algo_utils.f90
fortran/libhdf5utils/: CMakeLists.txt  hdf5utils.f90
fortran/libtest/: CMakeLists.txt  routines01.f90
patches/imGuIZMO.quat/: imGuIZMOquat.h.diff  imGuIZMOquat.h.win.diff  vGizmo.h.diff  vGizmo.h.win.diff
patches/libpng/: CMakeLists.txt.win.diff
